--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+body,
+html{
+  height: 100%;
+}
 .container{
   max-width: 1200px;
   margin-left: auto;
@@ -16,4 +20,10 @@
   padding: 40px;
   background-color: aqua;
   font-size: 20px;
+}
+.main-wrapper{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
